# humanizer-workbench

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/: demo.py  sample_ai_text.txt
src/humanizer/: __init__.py
src/humanizer/cli/: __init__.py  main.py
src/humanizer/core/: __init__.py  engine.py  models.py  pipeline.py
src/humanizer/detectors/: __init__.py  base.py  lexical.py  structural.py
src/humanizer/scoring/: __init__.py  scorer.py
src/humanizer/styles/: __init__.py  base.py  presets.py
src/humanizer/transformers/: __init__.py  base.py  llm.py
tests/fixtures/: ai_sample_basic.txt  ai_sample_technical.txt  clean_human_sample.txt
tests/unit/: test_detectors.py  test_engine.py  test_scoring.py  test_styles.py
