[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "humanizer-workbench"
version = "0.1.0"
description = "A multi-stage AI text humanization engine for transforming AI-generated writing into natural prose"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "text", "humanization", "writing", "nlp", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6.0",
    "mypy>=1.8.0",
]

[project.scripts]
humanizer = "humanizer.cli.main:cli"
humanizer-detect = "humanizer.cli.main:detect_command"

[project.urls]
Homepage = "https://github.com/puneethkotha/humanizer-workbench"
Repository = "https://github.com/puneethkotha/humanizer-workbench"
Issues = "https://github.com/puneethkotha/humanizer-workbench/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/humanizer"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["humanizer"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require the Anthropic API (deselect with '-m \"not integration\"')",
]
